@@ -1,4 +1,10 @@
 ----- cvs ci ------
+Mon Mar  5 22:51:20 NOVT 2001
+max (patch from Alex Bronin):
+* robotsArea
+* dont process zero sized files and tics
+
+----- cvs ci ------
 Thu Feb  1 20:47:16 NOVT 2001
 max:
 * manipulation with createKludges() & removing static buffers
